--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         <a href="https://www.youtube.com/watch?v=ngFG3ANI1Ao">
             <img src="https://img.youtube.com/vi/ngFG3ANI1Ao/maxresdefault.jpg" />
         </a>
-        <a href="https://www.youtube.com/watch?v=_E5cne5I9f5A">
+        <a href="https://www.youtube.com/watch?app=desktop&v=E5cne5I9f5A">
             <img src="https://img.youtube.com/vi/E5cne5I9f5A/maxresdefault.jpg" />
         </a>
-        <a href="https://www.youtube.com/watch?v=_ZTh9qRk3FJs">
+        <a href="https://www.youtube.com/watch?v=ZTh9qRk3FJs">
             <img src="https://img.youtube.com/vi/ZTh9qRk3FJs/maxresdefault.jpg" />
         </a>
-        <a href="https://www.youtube.com/watch?v=_ua6kJxv6Qm0">
+        <a href="https://www.youtube.com/watch?v=ua6kJxv6Qm0">
             <img src="https://img.youtube.com/vi/ua6kJxv6Qm0/maxresdefault.jpg" />
         </a>
     </a>
